# rvc-batch

./: MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt  rvc_batch_demo.ipynb
main/: utils.py
main/config/: variable.py
main/infer/: infer.py  pipeline.py
main/predictor/: crepe.py  djcm.py  fcpe.py  generator.py  gwnwrator.py  rmvpe.py
main/synth/: attentions.py  models.py  modules.py
src/rvc_batch/: __init__.py  rvc.py  utils.py
src/rvc_batch/cli/: __init__.py
src/rvc_batch/config/: variable.py
src/rvc_batch/infer/: infer.py  pipeline.py
src/rvc_batch/predictor/: crepe.py  djcm.py  fcpe.py  generator.py  rmvpe.py  swipe.py
src/rvc_batch/synth/: attentions.py  commons.py  models.py  modules.py
